@@ -9,6 +9,16 @@ PKG_CHECK_MODULES(GNOME_PANEL, libpanelapplet-2.0 gtk+-2.0 libgnomeui-2.0 gstrea
 AC_SUBST(GNOME_PANEL_CFLAGS)
 AC_SUBST(GNOME_PANEL_LIBS)
 
+GST_MAJORMINOR=0.10
+GST_REQUIRED=0.10.0
+PKG_CHECK_MODULES(GST, gstreamer-$GST_MAJORMINOR >= $GST_REQUIRED)
+AC_SUBST(GST_CFLAGS)
+AC_SUBST(GST_LIBS)
+
+PKG_CHECK_MODULES(POCKETSPHINX, sphinxbase pocketsphinx)
+AC_SUBST(POCKETSPHINX_CFLAGS)
+AC_SUBST(POCKETSPHINX_LIBS)
+
 IT_PROG_INTLTOOL([0.35])
 
 GNOME_DOC_INIT
@@ -18,11 +28,8 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[Gettext package])
 AM_GLIB_GNU_GETTEXT
 
-AC_ARG_WITH(sphinx2,
-	AS_HELP_STRING([--with-sphinx2=DIRECTORY],
-			[look for Sphinx2 source files in DIRECTORY]),
-			SPHINX2_PREFIX=$withval, SPHINX2_PREFIX="/usr")
-AC_SUBST(SPHINX2_PREFIX)
+POCKETSPHINX_PREFIX=`pkg-config --variable=prefix pocketsphinx`
+AC_SUBST(POCKETSPHINX_PREFIX)
 
 AC_OUTPUT([
 Makefile
